@@ -1,3 +1,14 @@
+2003-03-20  Roland McGrath  <roland@redhat.com>
+
+	* sysdeps/powerpc/bits/atomic.h (atomic_exchange): Remove unused
+	variable.  Remove superfluous memory clobber.
+
+	* include/atomic.h: Syntax braino fix.
+
+	* posix/tst-nice.c (do_test): Use %m formats instead of printing errno
+	in decimal.  Don't bail if niced at start.  Just check that nice call
+	bumps the total at all.
+
 2003-03-20  Alexandre Oliva  <aoliva@redhat.com>
 
 	* sysdeps/mips/bits/setjmp.h: Store all N32 and N64 registers,
